--- a/ExceptionIcon.Server/packages.config
+++ b/ExceptionIcon.Server/packages.config
@@ -7,4 +7,5 @@
   <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.6" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.6" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net452" />
+  <package id="StackTraceParser.Source" version="1.3.0" targetFramework="net452" />
 </packages>
