--- a/ExceptionIcon.Server/packages.config
+++ b/ExceptionIcon.Server/packages.config
@@ -1,11 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.AspNet.Cors" version="5.2.6" targetFramework="net452" />
-  <package id="Microsoft.AspNet.WebApi" version="5.2.6" targetFramework="net452" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.6" targetFramework="net452" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.6" targetFramework="net452" />
-  <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.6" targetFramework="net452" />
-  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.6" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net452" />
-  <package id="StackTraceParser.Source" version="1.3.0" targetFramework="net452" />
+  <package id="CSoft.Core.Web" version="1.1.0" targetFramework="net472" />
+  <package id="Huanent.JsonContent" version="1.2.0" targetFramework="net472" />
+  <package id="Interop.Acrobat" version="1.0.1" targetFramework="net472" />
+  <package id="Microsoft.AspNet.Cors" version="5.2.6" targetFramework="net472" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.6" targetFramework="net472" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.6" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi" version="5.2.6" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.6" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.6" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.6" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.6" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.6" targetFramework="net472" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net472" />
+  <package id="NLog" version="2.1.0" targetFramework="net472" />
+  <package id="StackTraceParser.Source" version="1.3.0" targetFramework="net472" />
 </packages>
